EXTRA_DIST = CMakeLists.txt \
			Proj4InstallPath.cmake \
			Proj4SystemInfo.cmake \
			Proj4Utilities.cmake   \
			proj_config.cmake.in \
			Proj4Config.cmake \
			Proj4Mac.cmake \
			Proj4Test.cmake \
			Proj4Version.cmake \
			policies.cmake \
			proj_config.cmake.in \
			project-config-version.cmake.in \
			project-config.cmake.in

